--- a/math/shape-space/reflections.html
+++ b/math/shape-space/reflections.html
@@ -1,23 +1,23 @@
 ---
-title: Transformations
-permalink: /math/shape-space/transformations/
+title: Reflections
+permalink: /math/shape-space/reflections/
 layout: shape-space
 ---
 
-<h1>Transformations</h1>
+<h1>Reflections</h1>
 
 <section>
-    <h2>What are Transformations?</h2>
+    <h2>What are Reflections?</h2>
     <p>Transformation is very important in Shape and Space. It involves moving different shapes, both 2D and 3D, in different ways. In this tutorial, we'll learn about them.</p>
 </section>
 
 <section>
-    <h2>Different Transformations</h2>
+    <h2>Different Reflections</h2>
     <p>There are <u>three</u> main transformations:</p>
     <ul>
         <li>The Translation</li>
         <li>The Reflection</li>
         <li>The Rotation</li>
     </ul>
-    <p>Of course, there are also some other Transformations like Dilations but these are the main ones.</p>
+    <p>Of course, there are also some other Reflections like Dilations but these are the main ones.</p>
 </section>
