--- a/physics/electrical-engineering/power.html
+++ b/physics/electrical-engineering/power.html
@@ -5,7 +5,10 @@ layout: electrical-engineering
 ---
 <h1>Electrical Power</h1>
 
-<p>Electrical power is the rate of electrical energy. Electrical power can be calculated using the following formula: </p>
-<blockquote>Power = Current x Voltage</blockquote>
-<p>You will most often see the formula as: </p>
-<blockquote>P = IV</blockquote>
+<section>
+    <h2>What is Electrical Power?</h2>
+    <p>Electrical power is the rate of electrical energy that something uses or produces. Electrical power can be calculated using the following formula: </p>
+    <blockquote>Power = Current x Voltage</blockquote>
+    <p>You will most often see the formula as: </p>
+    <blockquote>P = IV</blockquote>
+</section>
