--- a/math/shape-space/transformations.html
+++ b/math/shape-space/transformations.html
@@ -15,9 +15,9 @@ layout: shape-space
     <h2>Different Transformations</h2>
     <p>There are <u>three</u> main transformations:</p>
     <ul>
-        <li>The Translation</li>
-        <li>The Reflection</li>
-        <li>The Rotation</li>
+        <li><a href="/math/shape-space/translations/">The Translation</a></li>
+        <li><a href="/math/shape-space/reflections/">The Reflection</a></li>
+        <li><a href="/math/shape-space/rotations/">The Rotation</a></li>
     </ul>
     <p>Of course, there are also some other Transformations like Dilations but these are the main ones.</p>
 </section>
