--- a/math/shape-space/translations.html
+++ b/math/shape-space/translations.html
@@ -8,7 +8,7 @@ layout: shape-space
 
 <section>
     <h2>What are Translations?</h2>
-    <p>Transformation is very important in Shape and Space. It involves moving different shapes, both 2D and 3D, in different ways. In this tutorial, we'll learn about them.</p>
+    <p>A Translation is a Transformation in which you move a shape left, up, right, down, or diagonally, but doing the same Translation to each point on the shape. You <b>MUST</b> not mess up or forget any points, or the Translation will not be correct.</p>
 </section>
 
 <section>
