--- a/math/shape-space/translations.html
+++ b/math/shape-space/translations.html
@@ -12,12 +12,25 @@ layout: shape-space
 </section>
 
 <section>
-    <h2>Different Translations</h2>
-    <p>There are <u>three</u> main transformations:</p>
-    <ul>
-        <li>The Translation</li>
-        <li>The Reflection</li>
-        <li>The Rotation</li>
-    </ul>
-    <p>Of course, there are also some other Translations like Dilations but these are the main ones.</p>
+    <h2>Examples</h2>
+    <p>Here are a few examples of Translations:</p>
+    <section>
+        <h3>Example #1</h3>
+        <p></p>
+    </section>
+
+    <section>
+        <h3>Example #2</h3>
+        <p></p>
+    </section>
+
+    <section>
+        <h3>Example #3</h3>
+        <p></p>
+    </section>
+
+    <section>
+        <h3>Example #4</h3>
+        <p></p>
+    </section>
 </section>
