add using electrical power equation section

--- a/physics/electrical-engineering/power.html
+++ b/physics/electrical-engineering/power.html
@@ -12,3 +12,8 @@ layout: electrical-engineering
     <p>You will most often see the formula as: </p>
     <blockquote>P = IV</blockquote>
 </section>
+
+<section>
+    <h2>Using the Electrical Power Equation</h2>
+    <p>The electrical power equation is quite useful because the electrical power output of something or the electrical power used by something remains the same when we change the voltage or current. This is why power stations use really high voltage. </p>
+</section>
