--- a/math/shape-space/translations.html
+++ b/math/shape-space/translations.html
@@ -16,7 +16,7 @@ layout: shape-space
     <p>Here are a few examples of Translations:</p>
     <section>
         <h3>Example #1</h3>
-        <p></p>
+        <p>Translation Right By 5 Units</p>
     </section>
 
     <section>
