--- a/math/shape-space/translations.html
+++ b/math/shape-space/translations.html
@@ -17,6 +17,7 @@ layout: shape-space
     <section>
         <h3>Example #1</h3>
         <p>Translation Right By 5 Units</p>
+        <div style="height: 200px; width: 200px; border: 2px solid black;"></div>
     </section>
 
     <section>
