what is inductor section

--- a/physics/electrical-engineering/inductors.html
+++ b/physics/electrical-engineering/inductors.html
@@ -4,3 +4,8 @@ permalink: /physics/electrical-engineering/inductors/
 layout: electrical-engineering
 ---
 <h1>Inductors</h1>
+
+<section>
+    <h2>What is an Inductor?</h2>
+    <p>An inductor, like batteries and capacitors, stores electricity, but in the form of a magnetic field.</p>
+</section>
