how do inductors work section

--- a/physics/electrical-engineering/inductors.html
+++ b/physics/electrical-engineering/inductors.html
@@ -9,3 +9,8 @@ layout: electrical-engineering
     <h2>What is an Inductor?</h2>
     <p>An inductor, like batteries and capacitors, stores electricity, but in the form of a magnetic field.</p>
 </section>
+
+<section>
+    <h2>How do Inductors Work?</h2>
+    <p>Inductors are actually quite simple and only consist of a coil of wire. This generates a magnetic field when we pass electricity through it.</p>
+</section>
