--- a/physics/electrical-engineering/inductors.html
+++ b/physics/electrical-engineering/inductors.html
@@ -7,7 +7,7 @@ layout: electrical-engineering
 
 <section>
     <h2>What is an Inductor?</h2>
-    <p>An inductor, like batteries and capacitors, stores electricity, but in the form of a magnetic field.</p>
+    <p>An inductor, like batteries and capacitors, stores electricity, but in the form of a magnetic field. It can be used to smooth out electricity.</p>
 </section>
 
 <section>
