what is battery section

--- a/physics/electrical-engineering/batteries.html
+++ b/physics/electrical-engineering/batteries.html
@@ -4,3 +4,8 @@ permalink: /physics/electrical-engineering/batteries/
 layout: electrical-engineering
 ---
 <h1>Batteries</h1>
+
+<section>
+    <h2>What is a Battery?</h2>
+    <p>A battery stores electrical energy using chemistry. There are many different types of battery like lithium-ion batteries, lead-acid batteries, and more.</p>
+</section>
