--- a/programming/python/data-structures-and-algorithms/binary-search.html
+++ b/programming/python/data-structures-and-algorithms/binary-search.html
@@ -55,6 +55,6 @@ elif target < arr[mid]:
 else:
     left = mid + 1
     </code></pre>
-    <p>If we do find it, we'll return the index where we find it. In Python, when we return in a function, the code will automatically break out of the function.</p>
+    <p>If we do find the target, we'll return the index where we find it. In Python, when we return in a function, the code will automatically break out of the function.</p>
     <p>Finally, on the last line, we have <code>return -1</code>. This will just return <i><code>-1</code></i> if the target is not found.</i></p>
 </section>
