what is diode section

--- a/physics/electrical-engineering/diode.html
+++ b/physics/electrical-engineering/diode.html
@@ -4,3 +4,8 @@ permalink: /physics/electrical-engineering/diodes/
 layout: electrical-engineering
 ---
 <h1>Diodes</h1>
+
+<section>
+    <h2>What is a Diode?</h2>
+    <p>Diodes are electrical components that block the flow of electricity in one direction, but allow it in the opposite direction.</p>
+</section>
