replace section with text

--- a/programming/python/data-structures-and-algorithms/jump-search.html
+++ b/programming/python/data-structures-and-algorithms/jump-search.html
@@ -5,7 +5,7 @@ permalink: /programming/python/data-structures-and-algorithms/jump-search/
 ---
 
 <h1>Jump Search</h1>
-<p>In this tutorial, we'll learn about Jump Search, a simple and speedy Search Algorithm.</p>
+<p>In this tutorial, we'll learn about Jump Search, a simple Search Algorithm. Although it isn't widely used, it is still good to understand what it is and how to implement it, just in case you ever need to use it.</p>
 
 <section>
     <h2>What is a Jump Search?</h2>
