--- a/physics/electrical-engineering/conductors-insulators.html
+++ b/physics/electrical-engineering/conductors-insulators.html
@@ -8,12 +8,13 @@ layout: electrical-engineering
 <section>
     <h2>Inside the Atom</h2>
     <p>Atoms are made up of two parts: the electrons and the nucleus. The nucleus is an tiny and incredibly compact object in the center of the atom. The nucleus is made up of <em>protons</em> and <em>neutrons</em>. A proton has the charge of an electron, but positive. A neutron has a charge of zero.</p>
-    <p>The electrons are in the outer region of the atom.</p>
+    <p>The electrons are in the outer region of the atom. You can think of electrons in concentric circles depending on their energy.</p>
 </section>
 
 <section>
     <h2>What is a Conductor?</h2>
     <p>A <em>conductor</em> is a material that electricity can pass through. Most metals are conductive. We use conductors to make wires. Some materials are more conductive than others.</p>
+    <p>The reason conductors are good at transmitting electricity is because if electrons reach a certain energy, they can escape the atom and go to other atoms, so the electron is flowing. For conductive atoms, the energy to escape the atom can easily be reached.</p>
 </section>
 
 <section>
