--- a/physics/electrical-engineering/conductors-insulators.html
+++ b/physics/electrical-engineering/conductors-insulators.html
@@ -20,4 +20,5 @@ layout: electrical-engineering
 <section>
     <h2>What is an Insulator?</h2>
     <p>An <em>insulator</em> is a material that electricity can't pass through. This includes rubber and ceramic. We use insulators to cover the conductor when making wires so that people aren't injured by the electricity. Electricity can be dangerous!</p>
+    <p>Insulators aren't good at transmitting electricity because it is very hard for electrons to get the energy to escape the atom.</p>
 </section>
