--- a/programming/python/data-structures-and-algorithms/jump-search.html
+++ b/programming/python/data-structures-and-algorithms/jump-search.html
@@ -9,7 +9,7 @@ permalink: /programming/python/data-structures-and-algorithms/jump-search/
 
 <section>
     <h2>What is a Jump Search?</h2>
-    <p>A Jump Search is a simple and quick Search Algorithm. It searches for elements within an <i>array</i>, also known as a <i>list</i>, by cutting the list in half and checking if the last element of the half-list is greater than the target element/number. If it is, then we shrink the possible range of the element to that half of the list, and repeat the process until we find the element. Don't worry if you don't understand the concept yet.</p>
+    <p>A Jump Search is a simple and quick Search Algorithm. It searches for elements within an <i>array</i>, also known as a <i>list</i>, and returns the index of a target element. It works by skipping through the sorted list by a certain number of jumps, and then looks to see if the element it is at is higher than the target element. If it is, then it will run a <a href="/programming/python/data-structures-and-algorithms/linear-search/">Linear Search</a> backwards until it find the target element.</p>
 </section>
 
 <section>
