--- a/physics/electrical-engineering/diode.html
+++ b/physics/electrical-engineering/diode.html
@@ -7,5 +7,5 @@ layout: electrical-engineering
 
 <section>
     <h2>What is a Diode?</h2>
-    <p>Diodes are electrical components that block the flow of electricity in one direction, but allow it in the opposite direction.</p>
+    <p><em>Diodes</em> are electrical components that block the flow of electricity in one direction, but allow it in the opposite direction. The direction in which the diode blocks electricity is called the <em>reverse direction</em>, while the opposite direction is called the <em>forward direction</em>.</p>
 </section>
