--- a/programming/python/data-structures-and-algorithms/jump-search.html
+++ b/programming/python/data-structures-and-algorithms/jump-search.html
@@ -14,7 +14,7 @@ permalink: /programming/python/data-structures-and-algorithms/jump-search/
 
 <section>
     <h2>Jump Search Implementation</h2>
-    <p>A Jump Search is actually very easy to implement. Below is the implementation of a Jump Search:</p>
+    <p>A Jump Search is actually very easy to implement. Below is the implementation of a Jump Search, copy it down first, and then we will break it down:</p>
     <pre><code class="language-python">
 import math
 def jump_search(arr, x):
