what is json section

--- a/programming/python/json.html
+++ b/programming/python/json.html
@@ -7,7 +7,7 @@ permalink: /programming/python/json/
 
 <section>
     <h2>What is JSON?</h2>
-    <p></p>
+    <p>JSON is an easily understandable way to store data. It is basically like a giant Python dictionary, but in an easily changeable and extensible file. JSON files end in <code>.json</code>.</p>
 </section>
 
 <section>
