json module section

--- a/programming/python/json.html
+++ b/programming/python/json.html
@@ -11,6 +11,11 @@ permalink: /programming/python/json/
 </section>
 
 <section>
+    <h2>The <code>json</code> module</h2>
+    <p>Python has a built-in module called <code>json</code> which makes it easy to use JSON.</p>
+</section>
+
+<section>
     <h2>Converting JSON to Python</h2>
     <p></p>
 </section>
