convert json to python section

--- a/programming/python/json.html
+++ b/programming/python/json.html
@@ -12,12 +12,16 @@ permalink: /programming/python/json/
 
 <section>
     <h2>The <code>json</code> module</h2>
-    <p>Python has a built-in module called <code>json</code> which makes it easy to use JSON.</p>
+    <p>Python has a built-in module called <code>json</code> which makes it easy to use JSON in our applications and scripts.</p>
 </section>
 
 <section>
     <h2>Converting JSON to Python</h2>
-    <p></p>
+    <p>To convert JSON text to a Python dictionary, we can use the <code>loads()</code> function in the <code>json</code> module: </p>
+    <pre><code class="language-python">
+import json
+x = json.loads("[json string here]")
+    </code></pre>
 </section>
 
 <section>
