--- a/programming/python/data-structures-and-algorithms/jump-search.html
+++ b/programming/python/data-structures-and-algorithms/jump-search.html
@@ -46,12 +46,13 @@ def jump_search(arr, x):
 
 <section>
     <h2>Code Breakdown</h2>
-    <p>The code for a Jump Search is very simple. On the first line, we define a function with <pre><code class="language-python">def binary_search(arr, target):</code></pre> On the next line, we have a multi-line string. When you put a multi-line string on the line right after declaring a function, we call it a <i>doc-string</i>, which tells the developer a little bit about the function. Then, we declare some <i>pointers</i>:</p>
+    <p>The code for a Jump Search is very simple. On the first line, we define a function with <pre><code class="language-python">def jump_search(arr, x):</code></pre> On the next line, we have a multi-line string. When you put a multi-line string on the line right after declaring a function, we call it a <i>doc-string</i>, which tells the developer a little bit about the function. Then, we declare some variables for our function:</p>
     <pre><code class="language-python">
-left = 0
-right = len(arr) - 1
+n = len(arr)
+step = math.sqrt(n)
+prev = 0
     </code></pre>
-    <p>In our code, we use the pointers to keep track of the range in the list where the target element could be. The whole idea of using Jump Searches is using pointers and then keeping track of the range where our target could be. When the left pointer is greater than the right pointer, it means that the element is not in the list, so our program will return <code>-1</code>.</p>
+    <p><var>n</var> is the length of the array that we are going to search, and we use it for checking if we have jumped through the entire list but didn't find it. If that happens, then we will break the function and return <code>-1</code>.</p>
     <p>By using pointers, we are able to determine which range our element is in. Then, we change our pointers according to the <code>if-elif-else</code> statements, so we can shorten our range until we find our target.</p>
     <pre><code class="language-python">
 mid = (left + right) // 2
