--- a/programming/python/data-structures-and-algorithms/jump-search.html
+++ b/programming/python/data-structures-and-algorithms/jump-search.html
@@ -21,11 +21,11 @@ import math
 def jump_search(arr, x):
     """This function performs a simple Jump Search on arr and searches for x withen the array.."""
     n = len(arr)
-    step = math.sqrt(n)
+    step = math.floor(math.sqrt(n))
     prev = 0
     while arr[int(min(step, n)-1)] < x:
         prev = step
-        step += math.sqrt(n)
+        step += math.floor(math.sqrt(n))
         if prev >= n:
             return -1
     while arr[int(prev)] < x:
