update tutorial index

--- a/tutorial-index.html
+++ b/tutorial-index.html
@@ -20,6 +20,7 @@ layout: default
                     <li><a href="/programming/python/pymongo/">PyMongo</a></li>
                     <li><a href="/programming/python/fastapi/">FastAPI</a></li>
                     <li><a href="/programming/python/discord-py/">Discord.py</a></li>
+                    <li><a href="/programming/python/sockets/">Sockets</a></li>
                 </ul>
             </li>
             <li><a href="/programming/golang/">Go</a></li>
