--- a/programming/python/sockets/index.html
+++ b/programming/python/sockets/index.html
@@ -5,3 +5,4 @@ permalink: /programming/python/sockets/
 ---
 
 <h1>Python Sockets</h1>
+<p>In this tutorial series, you'll learn about programming with Sockets with Python, guiding you from the very basics to making a simple live-time CLI chat-app!</p>
