--- a/programming/python/data-structures-and-algorithms/jump-search.html
+++ b/programming/python/data-structures-and-algorithms/jump-search.html
@@ -69,5 +69,6 @@ while arr[int(prev)] < x:
     if prev == min(step, n):
         return -1
     </code></pre>
+    <p>Once we hit the previous jump index, we break and check if we found the index of <code>x</code>. If we did, we just return the index where we found <code>x</code>.</p>
     <p>Finally, on the last line, we have <code>return -1</code>. This will just return <i><code>-1</code></i> if the target is not found.</i></p>
 </section>
