--- a/programming/ruby/index.html
+++ b/programming/ruby/index.html
@@ -7,7 +7,7 @@ layout: ruby
 
 <section>
     <h2>What is Ruby?</h2>
-    <p>Ruby is a programming language</p>
+    <p>Ruby is a dynamic programming language with a simple and easy-to-read stle syntax. It's built open-source with a focus and simplicity and productivity.</p>
     <img src="/images/programming/ruby/ruby-logo.png" alt="The Logo of Ruby">
 </section>
 
