--- a/programming/ruby/index.html
+++ b/programming/ruby/index.html
@@ -13,5 +13,5 @@ layout: ruby
 
 <section>
     <h2>Why Learn Ruby?</h2>
-    <p>Ruby is easy to pick up, with simple syntax. In fact, someone with no programming experience could even understand some of Ruby's syntax. It's great alternative to <a href="/programming/python/">Python</a>, and allows you to work with many framewirjs, the most popular one being <a href="/programming/ruby/ruby-on-rails/">Ruby on Rails</a>.</p>
+    <p>Ruby is easy to pick up, with simple syntax. In fact, someone with no programming experience could even understand some of Ruby's syntax. It's great alternative to <a href="/programming/python/">Python</a>, and allows you to work with many frameworks, the most popular one being <a href="/programming/ruby/ruby-on-rails/">Ruby on Rails</a>.</p>
 </section>
