--- a/programming/ruby/setup.html
+++ b/programming/ruby/setup.html
@@ -4,3 +4,25 @@ permalink: /programming/ruby/setup/
 layout: ruby
 ---
 <h1>Ruby Setup</h1>
+
+<section>
+  <h2>Downloading Ruby</h2>
+  <p></p>
+  <section>
+    <h3>Ruby on Windows</h3>
+    <p></p>
+  </section>
+  <section>
+    <h3>Ruby on MacOS</h3>
+    <p></p>
+  </section>
+  <section>
+    <h3>Ruby on Linux</h3>
+    <p></p>
+  </section>
+</section>
+
+<section>
+  <h2>Getting a Code Editor</h2>
+  <p></p>
+</section>
