--- a/programming/ruby/setup.html
+++ b/programming/ruby/setup.html
@@ -4,6 +4,7 @@ permalink: /programming/ruby/setup/
 layout: ruby
 ---
 <h1>Ruby Setup</h1>
+<p>Before we start coding with Ruby, we'll need to download Ruby and get a Code Editor so we can write Ruby code.</p>
 
 <section>
   <h2>Downloading Ruby</h2>
