--- a/programming/ruby/setup.html
+++ b/programming/ruby/setup.html
@@ -10,15 +10,15 @@ layout: ruby
   <h2>Downloading Ruby</h2>
   <p></p>
   <section>
-    <h3>Ruby on Windows</h3>
+    <h3>Getting Ruby on Windows</h3>
     <p></p>
   </section>
   <section>
-    <h3>Ruby on MacOS</h3>
+    <h3>Getting Ruby on MacOS</h3>
     <p></p>
   </section>
   <section>
-    <h3>Ruby on Linux</h3>
+    <h3>Getting Ruby on Linux</h3>
     <p></p>
   </section>
 </section>
