what makes something conductive section

--- a/physics/electrical-engineering/conductors-insulators.html
+++ b/physics/electrical-engineering/conductors-insulators.html
@@ -22,5 +22,7 @@ layout: electrical-engineering
 
 <section>
     <h2>What Makes Something Conductive?</h2>
-    <p></p>
+    <p>You can think of electrons orbiting around the nucleus in different circles, called orbitals, depending on how much energy they have. There are a finite number of orbitals.The last orbital that electrons are in is called the valence band.</p>
+    <p>There is also another band called the conduction band. If an electron reaches this band, the electron can escape the atom and go to other atoms.</p>
+    <p>In conductors, the valence band and the conduction band overlap, so it is very easy for electrons to escape the atom. However, in insulators, the atom has a tight grip on the electrons and the conduction band is far away, so the electrons cannot escape.</p>
 </section>
