edit ruby setup

--- a/programming/ruby/setup.html
+++ b/programming/ruby/setup.html
@@ -7,23 +7,11 @@ layout: ruby
 <p>Before we start coding with Ruby, we'll need to download Ruby and get a Code Editor so we can write Ruby code.</p>
 
 <section>
-  <h2>Downloading Ruby</h2>
+  <h2>Installing Ruby</h2>
   <p></p>
-  <section>
-    <h3>Getting Ruby on Windows</h3>
-    <p></p>
-  </section>
-  <section>
-    <h3>Getting Ruby on MacOS</h3>
-    <p></p>
-  </section>
-  <section>
-    <h3>Getting Ruby on Linux</h3>
-    <p></p>
-  </section>
 </section>
 
 <section>
-  <h2>Getting a Code Editor</h2>
+  <h2>Installing a Code Editor</h2>
   <p></p>
 </section>
