--- a/physics/electrical-engineering/ohms-law.html
+++ b/physics/electrical-engineering/ohms-law.html
@@ -16,11 +16,11 @@ layout: electrical-engineering
 
 <section>
     <h2>Using Ohm's Law</h2>
-    <p>If we know current and resistance, we can calculate the voltage using Ohm's law: </p>
+    <p>If we know current and resistance, we can calculate the voltage using Ohm's law:</p>
     <blockquote>V = IR</blockquote>
-    <p>If we know voltage and resistance, we can calculate the current using Ohm's law and algebra: </p>
+    <p>If we know voltage and resistance, we can calculate the current by dividing both sides of Ohm's law by the resistance:</p>
     <blockquote>I = V/R</blockquote>
-    <p>If we know voltage and current, we can calculate resistance using Ohm's law and algebra: </p>
+    <p>If we know voltage and current, we can calculate resistance by dividing both sides of Ohm's law by current:</p>
     <blockquote>R = V/I</blockquote>
     <p>Resistance can't be measured while a circuit is operating, so if we need the resistance, we can simply use Ohm's law.</p>
 </section>
