--- a/physics/electrical-engineering/circuit-diagrams.html
+++ b/physics/electrical-engineering/circuit-diagrams.html
@@ -9,3 +9,8 @@ layout: electrical-engineering
     <h2>What is a Circuit Diagram?</h2>
     <p>A circuit diagram is used by electrical engineers to more easily represent circuits. Instead of using illustrations of the electrical components, circuit diagrams use abstract shapes.</p>
 </section>
+
+<section>
+    <h2>Electrical Components in Circuit Diagrams</h2>
+    <p>In this section, we will learn how to represent some common electrical components in circuit diagrams.</p>
+</section>
