--- a/physics/electrical-engineering/batteries.html
+++ b/physics/electrical-engineering/batteries.html
@@ -7,5 +7,10 @@ layout: electrical-engineering
 
 <section>
     <h2>What is a Battery?</h2>
-    <p>A battery stores electrical energy using chemistry. There are many different types of battery like lithium-ion batteries, lead-acid batteries, and more.</p>
+    <p>A battery stores electrical energy using chemistry. There are many different types of battery like lithium-ion batteries, lead-acid batteries, and more. Some batteries are rechargeable and others are not.</p>
+</section>
+
+<section>
+    <h2>How do Batteries Work?</h2>
+    <p>Batteries have three parts: the anode, the cathode, and the electrolyte.</p>
 </section>
