how do batteries work section

--- a/physics/electrical-engineering/batteries.html
+++ b/physics/electrical-engineering/batteries.html
@@ -12,5 +12,5 @@ layout: electrical-engineering
 
 <section>
     <h2>How do Batteries Work?</h2>
-    <p>Batteries have three parts: the anode, the cathode, and the electrolyte.</p>
+    <p>Batteries have three parts: the <i>anode</i>, the <i>cathode</i>, and the <i>electrolyte</i>. The anode is negatively charged, so the negative electrons are pushed away from it. The cathode has a positive charge, so the electrons are attracted to the cathode. The electrolyte is in between the anode and the cathode. The electrolyte allows ions to flow through it, thus moving the electron.</p>
 </section>
